frontend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: aasd4010
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/andyhftang/andyhftang/aasd4010-project-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: '100Mi'
            limits:
              memory: '500Mi'
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-access-token
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
