frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aasd4010-ml-demo-ingress-https
  labels:
    app: aasd4010-ml-demo-ingress-https
  namespace: aasd4010
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - aasd4010.ml-demo.lol
      secretName: wildcard-ml-demo-cert
  rules:
    - host: aasd4010.ml-demo.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
